--- a/05_flow_solver_with_AD.tex
+++ b/05_flow_solver_with_AD.tex
@@ -25,7 +25,7 @@ where $\rho_r = 850\text{kg}/\text{m}^3$ is the reference density at the referen
     \centering
     \begin{subfigure}[t]{0.48\textwidth}
         \includegraphics[width=\textwidth]{figures/flow_solver_pore-volume.eps}
-        \caption{The pore volume of the rock in a cell as a function of pressure.}
+        \caption{The pore volume in a cell as a function of pressure.}
         \label{fig:flowSolverPoreVolume}
         
     \end{subfigure}
@@ -68,7 +68,7 @@ After initializing the grid we want to define the discrete gradient and divergen
 The matrix C in the discrete operators are created such that when it is multiplied by the pressure $p$, the result becomes the pressure difference between two adjacent cells, as defined in \myeqref{eq:discreteGradient}. The matrix C is stored as a sparse matrix, and the reason why is clear from \autoref{fig:discreteOperatorsC}, which shows the sparse  structure of the matrix. The divergence operator is made using the fact that in the continuous case, the gradient operator is the adjoint of the divergence operator
 \begin{wrapfigure}{r}{5.5cm}
     \includegraphics[width=\linewidth]{figures/flowSolver_discrete_operators_C.eps}
-    \caption{Structure of discrete operator \texttt{C}.}
+    \caption{Structure of the discrete operator \texttt{C}.}
     \label{fig:discreteOperatorsC}
 \end{wrapfigure}
 \begin{equation*}
@@ -86,7 +86,7 @@ Now we have all the ingredients to set up the governing equations for the flow i
 $K$ is the permeability that we have saved in the \texttt{rock} variable and $\mu$ is the viscosity of the oil.
 The corresponding discrete equation that we call \texttt{flux} is given by 
 \lstinputlisting{code/flux.jl}
-Here, T is the transmissibilities that contain $K$ and the other properties of the grid. Since two adjacent cells can have different values of $\rho$, we use the  average for the two cells. \texttt{gradz} is the gradient of the cell centroid's $z$-value. This determines how much the flux depend on $g$ given the orientation of the adjacent cells. When \texttt{flux} is defined, we define the continuity equation in the continuous case
+Here, T is the transmissibilities that contain $K$ and the other properties of the grid. Since two adjacent cells can have different values of $\rho$, we use the  average for the two cells. \texttt{gradz} is the gradient of the cell centroid's $z$-value. This determines how much the flux depend on $g$ given the orientation of the adjacent cells. When \texttt{flux} is defined, we can define the continuity equation in the continuous case
 \begin{equation}
     \frac{\partial}{\partial t}(\phi\rho) + \nabla\cdot(\rho\textbf{v}) = q,
     \label{eq:continuityEqPressure}
@@ -97,7 +97,7 @@ where \texttt{pv} is the pore volume of the rock given in \myeqref{eq:poreVolume
 
 In addition, we need a few equations to represent the flow inside the wellbore. This flow will be the production term $q$ we ignored in the derivation of the \texttt{presEq} function. The standard model is to assume that the pressure is in hydrostatic equilibrium inside the wellbore, so that the pressure in a perforated cell (i.e., a cell in which the wellbore is open to the reservoir rock and the fluid can flow in or out of the well) is given as a hydrostatic difference from the pressure at a datum point (the bottom-hole pressure), typically given at the top of the reservoir. That is, the pressure in a perforated cell $c$ is given by
 \begin{equation*}
-p_c = p_{bh} + g (z_c - z_{bhp})\rho.    
+p_c = p_{bhp} + g (z_c - z_{bhp})\rho.    
 \end{equation*}
 In the discrete case this is given by the function \texttt{p\_conn}
 \lstinputlisting{code/p_conn.jl}
@@ -111,12 +111,12 @@ The residual expression for the total production \texttt{qS} is then given by su
 \lstinputlisting{code/rateEq.jl}
 Here \texttt{rhoS} is the density of the oil at the surface, to obtain the total volume produced. To control the well, we can either set total inflow or outflow of the well (evaluated at surface pressure) to be constant, or set the datum (bottom-hole) pressure as constant. In either case, we will wish to compute the other (i.e., if the bottom-hole pressure is given, we determine the surface rate, and vice versa). Herein, we assume the bottom-hole pressure to be given as 100 bar and we get
 \lstinputlisting{code/ctrlEq.jl}
-When all the governing equations are defined, we merge them into one large residual vector function $\boldsymbol{F}(\boldsymbol{x})$. The first 1000 residual equations are the \texttt{presEq} with negative production \texttt{q\_conn} for the indices \texttt{wc}. Equation number 1001 is the \texttt{rateEq} and Equation 1002 is the \texttt{ctrlEq}. Hence, $\boldsymbol{x}\in\Re^{1002}$, where the first 1000 elements are the average pressure in each cell, element 1001 will be the pressure at the datum point inside the well (\texttt{bhp}), and element 1002 is the surface fluid rate \texttt{qS}. Now, if we start by defining \texttt{p}, \texttt{bhp} and \texttt{qS} as AD-variables, $\boldsymbol{F}$ will also be an AD-variable and we will have the Jacobian of the residual vector function $\boldsymbol{F}$. This means we can solve the equations using the Newton-Raphson method, defined in \myeqref{eq:newtonRaphsonVector}. A pseudo code of how we solve the system can be seen below.
-\newpage
+When all the governing equations are defined, we merge them into one large residual vector function $\boldsymbol{F}(\boldsymbol{x})$. The first 1,000 residual equations are the \texttt{presEq} with negative production \texttt{q\_conn} for the indices \texttt{wc}. Equation number 1,001 is the \texttt{rateEq} and Equation 1,002 is the \texttt{ctrlEq}. Hence, $\boldsymbol{x}\in\Re^{1,002}$, where the first 1,000 elements are the average pressure in each cell, element 1,001 will be the pressure at the datum point inside the well (\texttt{bhp}), and element 1,002 is the surface fluid rate \texttt{qS}. Now, if we start by defining \texttt{p}, \texttt{bhp} and \texttt{qS} as AD-variables, $\boldsymbol{F}$ will also be an AD-variable and we will have the Jacobian of the residual vector function $\boldsymbol{F}$. This means we can solve the equations using the Newton-Raphson method, defined in \myeqref{eq:newtonRaphsonVector}. A pseudo code of how we solve the system can be seen below.
 \lstinputlisting{code/press_solver_main_loop.jl}
 
 \section{Flow Solver Results}
-If we simulate how the pressure in the reservoir will decay during one year, we will get the result displayed in \autoref{fig:flowSolverResult}.
+\label{sec:FlowSolverResults}
+If we simulate how the pressure in the reservoir will decay, we will get the result displayed in \autoref{fig:flowSolverResult}.
 \begin{figure}[H]
     \centering
     \includegraphics[width = 0.9\textwidth]{figures/flowSolver_result.eps}
@@ -125,7 +125,7 @@ If we simulate how the pressure in the reservoir will decay during one year, we 
 \end{figure}
 Note the different intervals for the color bar in \autoref{fig:flowSolverResult} compared to \autoref{fig:flowSolverGridWithWell}. With the current color bar interval, at initial state, the whole reservoir will be displayed red. Hence, we can see how the reservoir from the beginning being approximately 200 bar everywhere, begins with the largest pressure decay close to the well, but after some time, the oil is pushed towards the well by the pressure differences and the pressure also begins to decay furthest away from the well. 
 
-\autoref{fig:flowSolverProduction} shows the development of the production rate and the average pressure inside the reservoir. We can see how the production rate follows the average pressure inside the reservoir, and that after some time it approaches zero. This is when primary production ends, as explained in \autoref{sec:OilReservoirs}, and we need to apply external pressure to continue production in secondary production. To do this in the best possible way, it is important to be able to simulate how the pressure evolves inside the reservoir so that we can make good decisions on which actions produce the best possible results and when to take these actions. This flow solver is a simple example of how we can model primary production in a reservoir elegantly with governing equations on residual form, created by discrete differentiation operators, and AD. A simulation of secondary production can be seen in \autoref{sec:TwoPhaseSimulation}.
+\autoref{fig:flowSolverProduction} shows the development of the production rate and the average pressure inside the reservoir. We can see how the production rate follows the average pressure inside the reservoir, and that after some time, it approaches zero. This is when primary production ends, as explained in \autoref{sec:OilReservoirs}, and we need to apply external pressure to continue production in secondary production. To do this in the best possible way, it is important to be able to simulate how the pressure evolves inside the reservoir so that we can make good decisions on which actions produce the best possible results and when to take these actions. This flow solver is a simple example of how we can model primary production in a reservoir elegantly with governing equations on residual form, created by discrete differentiation operators and AD. A simulation of secondary production can be seen in \autoref{sec:TwoPhaseSimulation}.
 \begin{figure}[H]
 \centering
 \begin{minipage}{.47\textwidth}
@@ -138,17 +138,16 @@ Note the different intervals for the color bar in \autoref{fig:flowSolverResult}
 \begin{minipage}{.47\textwidth}
     \centering
     \includegraphics[width=\linewidth]{figures/flowSolver_Jacobian.eps}
-    \captionof{figure}{Structure of the $1002\times 1002$ Jacobian of the governing equations. There are 6419 non-zero elements.}
+    \captionof{figure}{Structure of the $1,002\times 1,002$ Jacobian of the governing equations. There are 6,419 non-zero elements.}
     \label{fig:flowSolverJacobian}
 \end{minipage}
 \end{figure}
 
-When it comes to solving the residual equations with the Newton-Raphson method, it is interesting to have a look at how the Jacobian of $\boldsymbol{F}$ looks like. \autoref{fig:flowSolverJacobian} shows the structure of this Jacobian. The first impression is that the matrix is very sparse. The reason for this is that each cell will only depend on its neighbouring cells. A small exception from this are the few cells containing the well. These cells will also depend on the bottom hole pressure. As there are only 6419 non-zero elements, out of more than 1 million matrix elements, it is clear that storing the full $1002\times 1002$ matrix will be very inefficient.
+However, our main interest is to observe how the different AD tools perform when solving the residual equations with the Newton-Raphson method and AD. Before looking at the results it is interesting to have a look at how the Jacobian of $\boldsymbol{F}$ looks like. \autoref{fig:flowSolverJacobian} shows the structure of this Jacobian. The first impression is that the matrix is very sparse. The reason for this is that each cell will only depend on its neighboring cells. A small exception from this are the few cells containing the well. These cells will also depend on the bottom hole pressure. As there are only $6,419$ non-zero elements, out of more than 1 million matrix elements, it is clear that storing the full $1,002\times 1,002$ matrix will be very inefficient.
 
-As explained in \autoref{ch:Implementation}, the different types of AD mentioned store the Jacobians differently. Both \texttt{FAD}, \texttt{CJAD} and the two AD implementations in MRST, will, at least eventually, store the Jacobians as a list of sparse matrices where each Jacobian element in the list is the Jacobian with respect to one primary variable. In this example, this is a lot more efficient than storing the full $1002\times 1002$ Jacobian as  \texttt{ForwardDiff} does.
+As explained in \autoref{ch:Implementation}, the different types of AD mentioned store the Jacobians differently. Both \texttt{FAD}, \texttt{CJAD} and the two AD implementations in MRST, will, at least eventually, store the Jacobians as a list of sparse matrices where each element in the list is the Jacobian with respect to one primary variable. In this example, this is expected to be a lot more efficient than storing the full $1,002\times 1,002$ Jacobian as  \texttt{ForwardDiff} does.
 
-\todo[inline]{Legg ved siden av figur over.}
-The difference in implementation of the Jacobian should make a big impact on the computation time for this problem. To benchmark the different methods, we need to do some extra work to make sure that it is actually the AD we benchmark and not other parts of the code. This is especially important for the code running in Julia, since when we call MATLAB from Julia it will be a lot of overhead. This means that the setup of the discrete gradient and divergence operators will take longer when done in MATLAB called from Julia, than when we do it directly in MATLAB. If we want to run the full simulation it is not possible to separate the AD part fully, but if we only benchmark the main-loop containing the Newton-Raphson method, AD will be a dominating part of the computations together with the linear solver \texttt{f.jac\textbackslash f.val}. This means that we at least will get an indication of how well the AD tools perform compared to each other. To see how the different methods scale as the discretization becomes finer and the system we solve grow, I have benchmarked three different discretizations. The first is the original setup with 10 cells in the spatial directions $x$, $y$, and $z$. This gives a total number of 1000 cells in the reservoir. Then, I have also tested the implementations for 20 and 30 cells in each spatial directions. The time spent solving the system for the different methods can be seen in \autoref{tab:FlowSolverSpeedTest}.
+To benchmark the different methods, we need to do some extra work to make sure that it is actually the AD we benchmark and not other parts of the code. This is especially important for the code running in Julia, since when we call MATLAB from Julia, it will be a lot of overhead. This means that the setup of the discrete gradient and divergence operators will take longer when performed in MATLAB called from Julia, than when we do it directly in MATLAB. If we want to run the full simulation, it is not possible to separate the AD part fully, but if we only benchmark the main-loop containing the Newton-Raphson method, AD will be a dominating part of the computations together with the linear solver \texttt{f.jac\textbackslash f.val}. This means that we at least will get an indication of how well the AD tools perform compared to each other. To see how the different methods scale as the discretization becomes finer, and the system we solve grow, I have benchmarked three different discretizations. The first is the original setup with 10 cells in the spatial directions $x$, $y$, and $z$. This gives a total number of 1,000 cells in the reservoir. Then, I have also tested the implementations for 20 and 30 cells in each spatial direction. The time spent solving the system for the different methods can be seen in \autoref{tab:FlowSolverSpeedTest}.
 \begin{table}[H]
     \centering
     \caption{Table with speed benchmarks of different AD methods solving the "Single-Phase Compressible AD Solver" for different discretizations.}
@@ -162,10 +161,9 @@ The difference in implementation of the Jacobian should make a big impact on the
          $30\times30\times30$ & ~ & 158.5s & 133.5s & 133.6s \\ \hline
     \end{tabular}
 \end{table}
-For 10 cells in each spatial direction it is clear that what I assumed based on the structure of the Jacobian in \autoref{fig:flowSolverJacobian} is true; The  \texttt{ForwardDiff} method takes much longer time than  \texttt{FAD}, \texttt{CJAD}  and \texttt{MRST}. Since  \textit{ForwardDiff} already spends over a minute for $10\times 10\times 10$ cells, it is omitted for finer discretizations. \texttt{MRST\_diagonal} is not presented here because there is a bug that cause the method to fail for this specific example. According to the results in \autoref{tab:FlowSolverSpeedTest}, \texttt{MRST} is a bit faster than  \texttt{FAD}, but \texttt{CJAD} and \texttt{MRST} are very similar. 
+For 10 cells in each spatial direction, it is clear that what was assumed based on the structure of the Jacobian in \autoref{fig:flowSolverJacobian} is true; The  \texttt{ForwardDiff} method takes much longer time than  \texttt{FAD}, \texttt{CJAD} and \texttt{MRST}. This also correspond to the result seen in \autoref{fig:benchmarkADVectorFunction}. Since \texttt{ForwardDiff} already spends over a minute for $10\times 10\times 10$ cells, it is omitted for finer discretizations. \texttt{MRST\_diagonal} is not presented here because there is a bug that cause the method to fail for this specific example, and the only fix we have found makes the method very similar to \texttt{MRST}. According to the results in \autoref{tab:FlowSolverSpeedTest}, \texttt{MRST} is a bit faster than  \texttt{FAD}, but \texttt{CJAD} and \texttt{MRST} perform very similar. 
 
-It is, although, still some uncertainty in these numbers as we do not know if the linear solver in MATLAB and Julia perform equally well. In addition, another factor that can effect the result is that for the current hardware these benchmarks are running on, the computations are so demanding that the hardware becomes warm. This can cause the performance of the hardware to decrease and ruin the test results. To remove the uncertainty of both the linear solver and the hardware heating up, we can perform another benchmark. Instead of solving the linear system \texttt{f.jac\textbackslash f.val} and continuing to the next Newton-Raphson iteration until it converges and then onto a new time step, we only assemble the first residual function multiple times. In this way we only benchmark the AD part of the problem. The time the computer uses to calculate the residual function value and Jacobian will not depend on what type of numbers we have, only on the structure of the matrices in the Jacobians. Since the structure is the same throughout the whole simulation, this benchmark will still be relevant to figure out which AD-implementation is best to solve this specific problem. \autoref{tab:FlowSolverAssemblyTest} shows the three methods assembling the first residual function of the simulation 100 times.
-\todo[inline]{flytte del om repetisjon fra lokal ad hit i stedet?}
+It is, although, still some uncertainty in these numbers as we do not know if the linear solver in MATLAB and Julia perform equally well. In addition, another factor that can affect the result is that for the current hardware these benchmarks are running on, the computations are so demanding that the hardware becomes warm. This can cause the performance of the hardware to decrease and ruin the test results. To remove the uncertainty of both the linear solver and the hardware heating up, we can perform another benchmark. Instead of solving the linear system \texttt{f.jac\textbackslash f.val} and continuing to the next Newton-Raphson iteration until it converges and then onto a new time step, we only assemble the first residual function multiple times. In this way we only benchmark the AD part of the problem. The time the computer uses to calculate the residual function value and Jacobian will not depend on what type of numbers we have, only on the structure of the matrices in the Jacobians. Since the structure is the same throughout the whole simulation, this benchmark will still be relevant to figure out which AD-implementation is best to solve this specific problem. Since the benchmark does the same calculation over and over again, we need to be aware that it could have been the case that the compiler figured out that there is no need to perform all calculations, and that it for example is enough doing it only once. However, this is tested and is not the case. \autoref{tab:FlowSolverAssemblyTest} shows the three methods assembling the first residual function of the simulation 100 times.
 \begin{table}[htb]
     \centering
     \caption{Table with speed benchmarks of different AD methods assembling the "Single-Phase Compressible AD Solver" residual function 100 times for different discretizations.}
@@ -179,4 +177,4 @@ It is, although, still some uncertainty in these numbers as we do not know if th
          $30\times30\times30$ & 44.2s& 17.2s& 16.5s \\ \hline
     \end{tabular}
 \end{table}
-It shows the same tendency as \autoref{tab:FlowSolverSpeedTest}, where \texttt{CJAD} and \texttt{MRST} are considerable faster than \texttt{FAD}. However, in this benchmark \texttt{MRST} is a bit faster than \texttt{CJAD} for the highest number of cells. There are however small differences and since there are some uncertainty in benchmarking computational speed on computers, a safe conclusion is that for this "Single-Phase Compressible AD Solver" example, the \texttt{MRST}- and \texttt{CJAD} implementation perform equally good.
+It shows the same tendency as \autoref{tab:FlowSolverSpeedTest}, where \texttt{CJAD} and \texttt{MRST} are considerable faster than \texttt{FAD}. However, in this benchmark \texttt{MRST} is a bit faster than \texttt{CJAD} for the highest number of cells. There are however small differences and since there are some uncertainty in benchmarking computational speed on computers, a safe conclusion is that for this "Single-Phase Compressible AD Solver" example, the \texttt{MRST} and \texttt{CJAD} implementation perform equally good.
