--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -3,7 +3,7 @@
 \addcontentsline{toc}{chapter}{Abstract}
 This thesis gives an introduction to what Automatic Differentiation (AD) is and how it can be used to calculate the derivatives of any function as precise as an analytic expression, with very little computational effort. This has been used to elegantly solve partial differential equations, describing flow in porous media, using a finite volume method and a discretization of the gradient- and divergence operators. The goal of the thesis has been to investigate whether the new programming language called Julia, can be used both as a language for quickly prototyping of new oil recovery simulators, as well as to implement highly efficient industrial simulators.
 
-Three different AD libraries has been implemented in Julia and compared to implementations from the MATLAB Reservoir Simulation Toolbox (MRST) \emph{\citep{mrstHomepage}}, created by the Computational Geosciences  group  in  the  department  of  Mathematics  and  Cybernetics  at  SINTEF Digital. This is a toolbox meant for quick prototyping with high-level and user-friendly AD tools. The two first implementations in Julia are inspired by the AD tools in MRST and they are called \texttt{ForwardAutoDiff}(\texttt{FAD}) and \texttt{CustomJacobianAutoDiff}(\texttt{CJAD}). The third implementation is inspired by the implementation of AD in OPM \emph{\citep{opm}}. OPM is a toolbox by the same group at SINTEF, made for creating efficient industrial simulators in C and C++. 
+Three different AD libraries has been implemented in Julia and compared to implementations from the MATLAB Reservoir Simulation Toolbox (MRST) \emph{\citep{mrstHomepage}}, created by the Computational Geosciences  group  in  the  department  of  Mathematics  and  Cybernetics  at  SINTEF Digital. This is a toolbox meant for quick prototyping with high-level and user-friendly AD tools. The first two implementations in Julia are inspired by the AD tools in MRST and they are called \texttt{ForwardAutoDiff}(\texttt{FAD}) and \texttt{CustomJacobianAutoDiff}(\texttt{CJAD}). The third implementation is inspired by the implementation of AD in OPM \emph{\citep{opm}}. OPM is a toolbox by the same group at SINTEF, made for creating efficient industrial simulators in C and C++. 
 
 To benchmark the three AD methods, two simulations have been implemented. The first is a single-phase flow solver, simulating the pressure drop in a reservoir when producing oil. \texttt{FAD} is the slowest method being approximately two times slower than \texttt{CJAD} and the implementation in MRST. While \texttt{CJAD} and MRST perform very similar, the method of Local AD is approximately six times faster than these two. The second implemented simulation is a two-phase flow solver, simulating how water flows when injected into a reservoir. This simulation is implemented for \texttt{CJAD} and MRST, which again perform similarly, as well as the method using local AD, which is approximately five times faster.
 
